# fdtd-rl

./: CMakeLists.txt  TODO  b  fdtd.cpp  fdtd.hpp  grid.hpp  kernels.cpp  kernels.hpp  main.cpp  phys.hpp
